Task_2/k8s-infra/ansible/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: digitalroute
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - navodademo.digitalroute.com
    secretName: hello-app-tls
  rules:
  - host: "navodademo.digitalroute.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: digitalroute-hello-service
              port:
                number: 8081
